Upgrade to gwt 2.10.0, maven plugins and java 11
Also fixed surefire config to be abel to compile using java 21.